--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
 	"keywords": [
 		"studynotion-backend"
 	],
-	"author": "Saikat Mukherjee",
+	"author": "Kapil Paliwal",
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.1.0",
